--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,39 @@ body {
     visibility: hidden;
 }
 
+.info_block {
+    position: absolute;
+    top: 10rem;
+    left: 2rem;
+    width: 45vw;
+    color: #e3e3e3;
+    visibility: hidden;
+}
+
+.info_block_content {
+    padding-right: 2rem;
+    max-height: 50vh;
+    overflow: scroll;
+}
+
+.info_block_return {
+    background: none;
+    border: none;
+    margin: 1.5rem 0 0 0;
+    text-align: left;
+    font-size: 110%;
+    font-weight: bold;
+    color: #e3e3e3;
+}
+
+.info_block_return:hover {
+    cursor: pointer;
+}
+
+.info_block_return span {
+    text-decoration: underline;
+}
+
 #scroll_down_footer {
     position: absolute;
     bottom: 3vh;
@@ -77,3 +110,23 @@ body {
     opacity: 0.75;
     color: #e3e3e3;
 }
+
+.styled_scrollbar {
+    /* Foreground, Background */
+    scrollbar-color: #D9D9D9 #d9d9d940;
+  }
+
+  .styled_scrollbar::-webkit-scrollbar {
+    width: 7px;
+    height: 0px;
+  }
+
+  .styled_scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #D9D9D9;
+  }
+
+  .styled_scrollbar::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #d9d9d940;
+  }
