--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,13 @@ body {
     height: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
+    background-color: #e3e3e3;
 }
 
 #main_canvas {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #192633;
 }
 
@@ -134,3 +135,30 @@ body {
     border-radius: 10px;
     background: #d9d9d940;
   }
+
+.transition_sec {
+    height: 3vh;
+}
+
+.trans_1 {
+    width: 90vw;
+    margin: 0 auto;
+    background-color: #192633;
+}
+
+.trans_2 {
+    width: 80vw;
+    margin: 0 auto;
+    background-color: #474e55;
+}
+
+.trans_3 {
+    width: 70vw;
+    margin: 0 auto;
+    background-color: #878787;
+}
+
+#sec_2d {
+    padding: 5rem;
+    color: #333;
+}
