--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
     height: 100%;
     font-family: 'Work sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
-    background-color: #e3e3e3;
+    background-color: #f1f1f1;
 }
 
 button {
@@ -210,14 +210,6 @@ button {
     background-color: #878787;
 }
 
-#sec_2d {
-    color: #333;
-}
-
-#sec_2d div {
-    margin-top: 15vh;
-}
-
 #sec_2d .transition_sec {
     margin-top: 0;
 }
@@ -247,6 +239,11 @@ button {
     color: #e3e3e3;
 }
 
+#sec_2d_quote h2 {
+    font-size: 2rem;
+    margin-top: 0;
+}
+
 #sec_2d_quote img {
     width: 30%;
     max-width: 350px;
@@ -255,4 +252,51 @@ button {
 
 #sec_2d_quote p {
     width: 45%;
+}
+
+#sec_2d_prices {
+    margin-top: 15vh;
+    padding: 0 2rem;
+}
+
+#sec_2d_prices h2 {
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+.price_wrapper {
+    display: flex;
+    column-gap: 2rem;
+    justify-items: center;
+}
+
+.price_item {
+    display: flex;
+    flex-direction: column;
+    aspect-ratio: 1.8;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: #ffffff;
+    border-radius: 2px;
+    box-shadow: 0px 1px 3px #00000040;
+}
+
+.price_item > span {
+    font-weight: 700;
+    padding: 1rem;
+}
+
+.price_item > span ~ span {
+    font-weight: inherit;
+}
+
+.price_item b {
+    font-size: 2rem;
+}
+
+.price_extra {
+    margin-top: 2rem;
+    text-align: center;
+    font-size: 80%;
 }
